<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="6"
        >

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:scrollbars = "vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <Button
            style="?android:attr/segmentedButtonStyle"
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/clear_button"
            android:clickable="false"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/divide_button"
            android:id="@+id/div"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text = "@string/multiply_button"
            android:id="@+id/mul"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text = "@string/delete_button"
            android:id="@+id/del"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_7_button"
            android:id="@+id/d7"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_8_button"
            android:id="@+id/d8"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_9_button"
            android:id="@+id/d9"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/subtract_button"
            android:id="@+id/sub"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_4_button"
            android:id="@+id/d4"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_5_button"
            android:id="@+id/d5"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_6_button"
            android:id="@+id/d6"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_button"
            android:id="@+id/add"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_1_button"
            android:id="@+id/d1"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_2_button"
            android:id="@+id/d2"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_3_button"
            android:id="@+id/d3"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/parenthethis_button"
            android:id="@+id/parenthessis"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_0_button"
            android:id="@+id/d0"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comma_button"
            android:id="@+id/coma"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_button"
            android:id="@+id/sign"
            android:layout_weight="1"
            />
        <Button
            style="?android:attr/segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eqv_button"
            android:id="@+id/eqv"
            android:tag="eqv"
            android:layout_weight="1"
            />
    </LinearLayout>
</TableLayout>